--- a/Students_test/Jenkinsfile
+++ b/Students_test/Jenkinsfile
@@ -27,16 +27,16 @@ pipeline {
             }
         }
 
-        stage('Build') {
-            steps {
-                sh '''
-                    echo "[+] Compiling source files..."
-                    cd Test2
-                    find src -name "*.java" > sources.txt
-                    javac -encoding UTF-8 -d ../${CLASS_DIR} -cp ../${JUNIT_JAR_PATH} @sources.txt
-                '''
-            }
-        }
+	stage('Build') {
+	    steps {
+	        sh '''
+	            echo [+] Compiling source files...
+	            mkdir -p classes
+	            javac -d classes src/Students/*.java
+	        '''
+	    }
+	}
+
 
         stage('Test') {
             steps {
