--- a/Students_test/Jenkinsfile
+++ b/Students_test/Jenkinsfile
@@ -30,10 +30,10 @@ pipeline {
 	stage('Build') {
 	    steps {
 	        sh '''
-    		echo [+] Compiling source files...
-    		mkdir -p classes
-    		javac -d classes Students_test/src/Students/*.java
-	        '''
+        	    echo [+] Compiling source files...
+    		    mkdir -p classes
+   		    javac -cp lib/junit.jar -d classes Students_test/src/Students/*.java
+		'''
 	    }
 	}
 
